feat: 更改 API 生成
